--- a/portfolio.html
+++ b/portfolio.html
@@ -176,6 +176,15 @@
                         </li>
                     </ul>
                 </div>
+                <form class="footer-form">
+                    <h3 class="footer-form-title">Подпишитесь на рассылку</h3>
+                    <input class="footer-form-input" type="email" name="user-email" placeholder="E-mail">
+                    <button type="button" class="footer-form-btn"><span class="footer-form-btn-name">Подписаться</span>
+                        <svg class="footer-form-svg" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-icon-telegram"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </footer>
     </body>
