подключил модальное окно (js)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <section class="hero">
                 <div class="container">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                    <button type="button" class="hero-button"><span class="hero-button-name">Заказать услугу</span></button>
+                    <button type="button" class="hero-button" data-modal-open><span class="hero-button-name">Заказать услугу</span></button>
                 </div>
                 </section>
 
@@ -402,5 +402,7 @@
                 </form>
             </div>
         </div>
+
+        <script src="./js/modal.js"></script>
     </body>
 </html>
